[package]
name = "ttv-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["tls-rustls", "runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
